--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
-<html>
-<head> 
-<title>文字+圖片練習</title>
+<!DOCTYPE html>
+<html lang="zt-TW">
+<head>
+<title>表格練習1</title>
+<meta charset="ntf-8">
 </head>
+
 <body>
-<h1>圖片+文字<h1>
-<img src="https://www.twreporter.org/images/20200421194711-ec9058320e055cd86665400a66a0ff2f-mobile.jpg">
-
-<h3>疫情<h3>
-
-敦睦艦隊疫調結果出爐，24位確診個案中，7人無症狀，其他個案最早於4月1日發病，多數人集中在4月11至18日發病，半數以上有發燒情形。由於確診個案共曾到訪10個縣市、90多處公共場所，指揮中心針對在附近的21萬民眾發出簡訊，希望收到的民眾能自主健康管理14天，有症狀則撥打1922。<p>
-
-全球確診突破240萬、死亡人數突破16萬5千人。<p>
-
-新加坡首度單日新增確診破千，境內確診總數亦突破8,000例，成為東南亞確診最多國家。<p>
-
-部分國家疫情開始走緩。德國部分商家20日重新開張；瑞士、紐西蘭下週放寬限制；比利時、泰國正考量是否逐步解除封鎖。韓國單日確診數穩定下降，其中首爾時隔47天出現零確診，韓國政府鬆綁社交距離規範。
+  
+<table border=1>
+  
+  <caption>期中成績</caption>
+  
+  <tr><th>名次</th><th>姓名</th><th>平均</th></th>
+  
+  <tr><td>1st</td><td>申湘湄</td><td>100</td></tr>
+  <tr><td>2nd</td><td>潘思岑</td><td>98</td></tr>
+  <tr><td>3rd</td><td>鄭羽雯</td><td>95</td></tr>
+  <tr><td>4th</td><td>蔡婉妮</td><td>91</td></tr>
+</table>
+</body>
+</html>
